syntax = "proto3";
package iroha.protocol;
import "iroha/protocol/commands.proto";
import "iroha/protocol/primitive.proto";

message Header {
    uint64 created_time = 1;
    repeated Signature signatures = 2;
}

message Transaction {
    message Payload {
        repeated Command commands = 1;
        string creator_account_id = 2;
        uint64 tx_counter = 3;
        uint64 created_time = 4;
    }

    Payload payload = 1;
    repeated Signature signature = 2;
}

message Block {
    // everything that should be signed:
    message Payload {
        repeated Transaction transactions = 1;
        uint32 tx_number = 2; // the number of transactions inside. Maximum 16384 or 2^14
        uint64 height = 3; // the current block number in a ledger
        bytes prev_block_hash = 5; // Previous block hash
        uint64 created_time = 6;
    }

    Payload payload = 1;
    repeated Signature signatures = 2;
}
