syntax = "proto3";
package iroha.protocol;
import "iroha/protocol/primitive.proto";

message AddAssetQuantity {
    string account_id = 1;
    string asset_id = 2;
    Amount amount = 3;
}

message AddPeer {
    Peer peer = 1;
}

message AddSignatory {
    string account_id = 1;
    bytes public_key = 2;
}

message CreateAsset {
    string asset_name = 1;
    string domain_id = 2;
    uint32 precision = 3;
}

message CreateAccount {
    string account_name = 1;
    string domain_id = 2;
    bytes main_pubkey = 3;
}

message SetAccountDetail {
    string account_id = 1;
    string key = 2;
    string value = 3;
}

message CreateDomain {
    string domain_id = 1;
    string default_role = 2;
}

message RemoveSignatory {
    string account_id = 1;
    bytes public_key = 2;
}

message SetAccountQuorum {
    string account_id = 1;
    uint32 quorum = 2;
}

message TransferAsset {
    string src_account_id = 1;
    string dest_account_id = 2;
    string asset_id = 3;
    string description = 4;
    Amount amount = 5;
}

message AppendRole {
    string account_id = 1;
    string role_name = 2;
}

message DetachRole {
    string account_id = 1;
    string role_name = 2;
}

message CreateRole {
    string role_name = 1;
    repeated RolePermission permissions = 2;
}

message GrantPermission {
    string account_id = 1;
    GrantablePermission permission = 2;
}

message RevokePermission {
    string account_id = 1;
    GrantablePermission permission = 2;
}

message SubtractAssetQuantity {
    string account_id = 1;
    string asset_id = 2;
    Amount amount = 3;
}

message Command {
    oneof command {
        AddAssetQuantity add_asset_quantity = 1;
        AddPeer add_peer = 2;
        AddSignatory add_signatory = 3;
        AppendRole append_role = 4;
        CreateAccount create_account = 5;
        CreateAsset create_asset = 6;
        CreateDomain create_domain = 7;
        CreateRole create_role = 8;
        DetachRole detach_role = 9;
        GrantPermission grant_permission = 10;
        RemoveSignatory remove_sign = 11;
        RevokePermission revoke_permission = 12;
        SetAccountDetail set_account_detail = 13;
        SetAccountQuorum set_quorum = 14;
        SubtractAssetQuantity subtract_asset_quantity = 15;
        TransferAsset transfer_asset = 16;
    }
}
