syntax = "proto3";
package iroha.protocol;

import "iroha/protocol/primitive.proto";

message GetAccount {
    string account_id = 1;
}

message GetSignatories {
    string account_id = 1;
}

message GetAccountTransactions {
    string account_id = 1;
}

message GetAccountAssetTransactions {
    string account_id = 1;
    string asset_id = 2;
}

message GetTransactions {
    repeated bytes tx_hashes = 1;
}

message GetAccountAssets {
    string account_id = 1;
    string asset_id = 2;
}

message GetAccountDetail {
    string account_id = 1;
    string detail = 2;
}

message GetAssetInfo {
    string asset_id = 1;
}

message GetRoles {

}

message GetRolePermissions {
    string role_id = 1;
}


message Query {
    message Payload {
        uint64 created_time = 1;
        string creator_account_id = 2;
        oneof query {
            GetAccount get_account = 3;
            GetSignatories get_account_signatories = 4;
            GetAccountTransactions get_account_transactions = 5;
            GetAccountAssetTransactions get_account_asset_transactions = 6;
            GetTransactions get_transactions = 7;
            GetAccountAssets get_account_assets = 8;
            GetAccountDetail get_account_detail = 9;
            GetRoles get_roles = 10;
            GetRolePermissions get_role_permissions = 11;
            GetAssetInfo get_asset_info = 12;
        }
        // used to prevent replay attacks.
        uint64 query_counter = 13;
    }

    Payload payload = 1;
    Signature signature = 2;
}
